--- a/src/csharp/csharp.csproj
+++ b/src/csharp/csharp.csproj
@@ -5,4 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="hello.dll" CopyToOutputDirectory="Always" />
+  </ItemGroup>
 </Project>
